--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "sideEffects": false,
   "types": "./lib/index.d.ts",
-  "version": "0.1.1",
+  "version": "0.1.2-0",
   "devDependencies": {
     "@ethersproject/constants": "^5.6.0",
     "@ethersproject/units": "^5.6.0",
